src/objects/Visit_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Visit_reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_information__c</fullName>
        <label>Competitive information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_of_next_visit__c</fullName>
        <label>Goal of next visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal_of_the_visit__c</fullName>
        <label>Goal of the visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_competitor__c</fullName>
        <label>Main competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Visit Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Main_competitor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>